syntax = "proto3";

import "validate/validate.proto";
import "google/protobuf/empty.proto";

option go_package = "./pbsemantic";

package semantic;

service ServiceProviders {
  rpc GetCategories (google.protobuf.Empty) returns (GetCategoriesResponse) {}
}

service Merchants {
  rpc GetCategories (google.protobuf.Empty) returns (GetCategoriesResponse) {}
}

service Products {
  rpc PredictCategory(stream PredictCategoryRequest) returns (stream PredictCategoryResponse) {}

  rpc GetCategories (google.protobuf.Empty) returns (GetCategoriesResponse) {}
  rpc GetAttributesSchema(GetAttributesSchemaRequest) returns (GetAttributesSchemaResponse) {}
}

message Category {
  uint64 id = 1;
  string name = 2;

  uint64 parent_id = 3;
  repeated Category childs = 4;
}

message AttributeSchema {
  uint64 id = 1;
  uint64 category_id =  2;

  string name = 3;
  string value_type = 4;
}

message GetCategoriesResponse {
  repeated Category categories = 1;
}

message GetAttributesSchemaRequest {
  uint64 category_id = 1;
}

message GetAttributesSchemaResponse {
  repeated AttributeSchema attributes = 1;
}

message AttributeData {
  uint64 id = 1;
  uint64 schema_id = 2;
  string value_type = 4;
}

message PredictCategoryRequest {
  string title = 1;
}

message PredictCategoryResponse {
  Category category = 1;
  double score = 2;
}

